--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
   "devDependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
     "@edx/browserslist-config": "^1.1.1",
-    "@openedx/frontend-build": "^13.0.19",
-    "@openedx/paragon": "22.0.0",
     "@edx/frontend-platform": "7.1.3",
     "@edx/reactifex": "^2.1.1",
+    "@openedx/frontend-build": "^13.0.19",
+    "@openedx/paragon": "22.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.1",
     "husky": "8.0.3",
+    "postcss-loader": "^8.1.1",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -50,7 +51,10 @@
     "react-router-dom": "6.21.3",
     "react-test-renderer": "17.0.2",
     "redux": "4.2.1",
-    "semantic-release": "21.1.2"
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.1",
+    "semantic-release": "21.1.2",
+    "style-loader": "^4.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.5.1",
